comment out descr

--- a/_config.yml
+++ b/_config.yml
@@ -61,13 +61,13 @@ content:
         sub_title: Software Engineer
         caption: July 2022 - Present
         description: | # this will include new lines to allow paragraphs
-            Member of the Citrix Cloud Identity team. 
+# Member of the Citrix Cloud Identity team. 
       - layout: top-middle
         title: Citrix
         caption: Mar. 2021 - Sep. 2021
         sub_title: Software Engineer Intern
         description: | # this will include new lines to allow paragraphs
-          Took over and completed a full migration of the Synthetic Monitors of the Citrix Cloud Identity team. 
+# Took over and completed a full migration of the Synthetic Monitors of the Citrix Cloud Identity team. 
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
@@ -81,7 +81,8 @@ content:
   - title: Publications
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Paper at the 2022 International Conference on Engineering and Emerging Technologies (ICEET). |
+      Paper at the 2022 International Conference on Engineering and Emerging Technologies (ICEET). 
+      
       title: "Evaluating a game-based and a web-based user interface using skin conductivity signals and gamers and non gamers preferences".
       
 
